--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:DUIqkX6sv8z2RVvjtvTsNKNp4agdkSuXXN8AmvMEg9Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=api_laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=test_db
+DB_USERNAME=devuser
+DB_PASSWORD=devpass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
